<resources>
    <string name="app_name">Kozbook App</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_cover">book_cover</string>
    <string name="author">Author</string>
    <string name="textview">TextView</string>
    <string name="search">Search</string>
    <string name="Back"><![CDATA[<]]></string>
    <string name="book_list">BOOK LIST</string>
    <string name="author_list">Author List</string>
    <string name="location_list">Location List</string>
    <string name="filters">Filters</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="authors">Authors</string>
    <string name="locations">Locations</string>
    <string name="location_history">Location History</string>
    <string name="access_history">Access History</string>
    <string name="add">Add</string>
    <string name="add_a_book">Add a book</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
</resources>