<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.BookFragment">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/backBtn"-->
<!--            android:layout_width="64dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/Back" />-->

<!--        <Space-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1" />-->

<!--        <TextView-->
<!--            android:id="@+id/bookName"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/hello_blank_fragment"-->
<!--            android:layout_weight="1"-->
<!--            android:textSize="34sp" />-->

<!--        <Space-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1" />-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/infoBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <ImageView-->
<!--            android:id="@+id/coverView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/no_cover"-->
<!--            android:contentDescription="@string/book_cover"-->
<!--            app:srcCompat="@drawable/no_cover" />-->

<!--        <LinearLayout-->
<!--            android:id="@+id/basicInfoLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:orientation="vertical">-->

        <TextView
            android:id="@+id/bookName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:textSize="34sp" />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="30sp" />
<!--        </LinearLayout>-->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/LocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_history"
        android:textSize="24sp" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/locationTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

        </TableLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/AccessText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_history"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/accessTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

        </TableLayout>

    </ScrollView>

</LinearLayout>